@@ -1,3 +1,6 @@
+20130818 - fhabermann
+* added memberpanel to group edit
+
 20130810 - fhabermann
 * added memberpanel
 
